--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <head>
 </head>
 <body>
-  <p>hello world</p>
+  <div class="background">
+    <iframe class="game" src="version/1.12.html"></iframe>
+  </div>
 </body>
