--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
   <div class="background">
     <iframe class="game" src="version/1.12.html"></iframe>
   </div>
+  <div>
+        ©2023-2025 Alfakma
+  </div>
 </body>
