--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
   <div class="background">
-    <iframe class="game" src="version/1.12.html"></iframe>
+    <iframe class="game" src="version/1.12.1.html"></iframe>
   </div>
+  <p class="name">Coiny Clicker is a game where we click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</p>
   <div>
         ©2023-2025 Alfakma
   </div>
 </body>
+</html>
