--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coiny Clicker 1.12.1</title>
+  <meta property="og:title" content="Alfakma Games">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="background">
@@ -11,7 +13,8 @@
   </div>
   <p class="name">Coiny Clicker is a game where we click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</p>
   <div>
-        ©2023-2025 Alfakma
+      <br>
+      ©2023-2025 Alfakma
   </div>
 </body>
 </html>
