--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="background">
-    <iframe class="game" src="version/1.12.1.html"></iframe>
-  </div>
-  <p class="name">Coiny Clicker is a game where we click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</p>
-  <div>
-      <br>
-      ©2023-2025 Alfakma
+  <div class="center">
+    <div class="background">
+      <iframe class="game" src="version/1.12.1.html"></iframe>
+    </div>
+    <p class="name">Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</p>
+    <div>
+        <br>
+        ©2023-2025 Alfakma
+    </div>
   </div>
 </body>
 </html>
