--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
       <iframe class="game" src="version/1.12.1.html"></iframe>
     <h3 class="name">Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</h3>
     <br>
-    <h2>Some History Versions:</h2>
-    <details>
-      <summary>Modern CoinyS</summary>
-       <lists>
-         <li><a href="version/1.12.1" target="_blank">1.12.1</a></li>
-         <li><a href="version/1.12" target="_blank">1.12</a></li>
-         <li><a href="version/1.11" target="_blank">1.11</a></li>
-       </lists>
-    </details>
-    </div> 
+      <div class="versions">
+        <h2>Some History Versions:</h2>
+        <details>
+          <summary>Modern CoinyS</summary>
+           <lists>
+             <li><a href="version/1.12.1" target="_blank">1.12.1</a></li>
+             <li><a href="version/1.12" target="_blank">1.12</a></li>
+             <li><a href="version/1.11" target="_blank">1.11</a></li>
+           </lists>
+        </details>
+      </div>
+    </div>
+    <br>
         ©2023-2025 Alfakma
   </div>
 </body>
