--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <div class="versions">
         <h2>Some History Versions:</h2>
         <details>
-          <summary>Modern CoinyS</summary>
-           <lists>
+          <listt>Modern CoinyS</listt>
+           <ul>
              <li><a href="version/1.12.1" target="_blank">1.12.1</a></li>
              <li><a href="version/1.12" target="_blank">1.12</a></li>
              <li><a href="version/1.11" target="_blank">1.11</a></li>
-           </lists>
+           </ul>
         </details>
       </div>
     </div>
