--- a/versions.html
+++ b/versions.html
@@ -5,6 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Coiny Clicker Versions</title>
   <style>
+    h2 {
+      text-align: center;
+    }
+    details {
+      background-color: #5bbdff;
+      margin: 10px 0;
+      border-radius: 6px;
+      padding: 10px;
+    }
+    listt {
+      cursor: pointer;
+      font-size: 1.3em;
+      font-weight: bold;
+    }
+    ul {
+      list-style: none;
+      padding-left: 1em;
+    }
+    li a {
+      color: #ffffff;
+      text-decoration: none;
+      display: block;
+      padding: 2px 0;
+    }
+    li a:hover {
+      text-decoration: underline;
+    }
+    body {
+      font-family: sans-serif;
+      background: #50a2f4;
+      color: #f0f0f0;
+      padding: 20px;
+    }
   </style>
 </head>
 <body>
