--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <iframe src="versions.html" width="75%" height="300" style="border:0px solid black;"></iframe>
     </div>
     <br>
-        ©2023-2025 Alfakma
+    <div class="cr">©2023-2025 Alfakma</div>
   </div>
 </body>
 </html>
