--- a/versions.html
+++ b/versions.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Coiny Clicker Versions</title>
   <style>
-    h2 {
+    tl {
+      font-size: 1.7em;
+      font-weight: bold;
       text-align: center;
     }
     details {
@@ -41,15 +43,13 @@
   </style>
 </head>
 <body>
-  <div class="versions">
-    <h2>Some History Versions:</h2>
+    <tl>Some Older Versions:</tl>
     <details>
-      <listt>Modern CoinyS</listt>
+      <listt>Modern</listt>
        <ul>
-         <li><a href="version/1.12.1" target="_blank">1.12.1</a></li>
-         <li><a href="version/1.12" target="_blank">1.12</a></li>
-         <li><a href="version/1.11" target="_blank">1.11</a></li>
+         <li><a href="version/1.12.1" target="_blank">1.12.1 2/5/2025</a></li>
+         <li><a href="version/1.12" target="_blank">1.12 1/5/2025</a></li>
+         <li><a href="version/1.11" target="_blank">1.11 26/4/2025</a></li>
        </ul>
     </details>
-  </div>
 </body>
