--- a/versions.html
+++ b/versions.html
@@ -44,8 +44,8 @@
 </head>
 <body>
     <tl>Some Older Versions:</tl>
-    <details>
-      <listt>Modern</listt>
+    <details open>
+      <listt>Modern Versions</listt>
        <ul>
          <li><a href="version/1.12.1" target="_blank">1.12.1 2/5/2025</a></li>
          <li><a href="version/1.12" target="_blank">1.12 1/5/2025</a></li>
@@ -53,3 +53,4 @@
        </ul>
     </details>
 </body>
+</html>
