--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coiny Clicker 1.12.1</title>
-  <meta property="og:title" content="Alfakma Games">
+  <meta property="og:title" content="Coiny Clicker">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="center">
     <div class="background">
+    <div class="title">Coiny Clicker</div>
       <iframe class="game" src="version/1.12.1.html"></iframe>
     <h3 class="name">Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</h3>
     <br>
