--- a/versions.html
+++ b/versions.html
@@ -16,7 +16,7 @@
       border-radius: 6px;
       padding: 10px;
     }
-    listt {
+    summary {
       cursor: pointer;
       font-size: 1.3em;
       font-weight: bold;
@@ -45,12 +45,12 @@
 <body>
     <tl>Some Older Versions:</tl>
     <details open>
-      <listt>Modern Versions</listt>
-       <ul>
-         <li><a href="version/1.12.1" target="_blank">1.12.1 2/5/2025</a></li>
-         <li><a href="version/1.12" target="_blank">1.12 1/5/2025</a></li>
-         <li><a href="version/1.11" target="_blank">1.11 26/4/2025</a></li>
-       </ul>
+      <summary>Modern Versions</summary>
+      <ul>
+        <li><a href="version/1.12.1" target="_blank">1.12.1 2/5/2025</a></li>
+        <li><a href="version/1.12" target="_blank">1.12 1/5/2025</a></li>
+        <li><a href="version/1.11" target="_blank">1.11 26/4/2025</a></li>
+      </ul>
     </details>
-</body>
+  </body>
 </html>
