--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="topbar">
+    <p class="title">Coiny Clicker <span class="version">version 1.12.1</span></p>
+  </div>
   <div class="center">
     <div class="background">
-    <div class="title">Coiny Clicker</div>
       <iframe class="game" src="version/1.12.1.html"></iframe>
     <h3 class="name">Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</h3>
     <br>
