--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
       <div class="background">
         <iframe class="game" src="version/1.12.1.html"></iframe>
-      <h3 class="name">Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</h3>
+      <div class="name">Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems</div>
       <br>
       <iframe src="versions.html" width="60%" height="300" style="border:0px solid black;"></iframe>
     </div>
