--- a/versions.html
+++ b/versions.html
@@ -47,9 +47,20 @@
     <details open>
       <summary>Modern Versions</summary>
       <ul>
-        <li><a href="version/1.12.1" target="_blank">1.12.1 2/5/2025</a></li>
-        <li><a href="version/1.12" target="_blank">1.12 1/5/2025</a></li>
-        <li><a href="version/1.11" target="_blank">1.11 26/4/2025</a></li>
+        <li><a href="version/1.12.1" target="_blank">1.12.1 - 2/5/2025</a></li>
+        <li><a href="version/1.12" target="_blank">1.12 - 1/5/2025</a></li>
+        <li><a href="version/1.11" target="_blank">1.11 - 26/4/2025</a></li>
+        <li><a href="version/1.10.1" target="_blank">1.10.1 - 9/4/2025</a></li>
+        <li><a href="version/1.10" target="_blank">1.10 - 9/3/2025</a></li>
+      </ul>
+    </details>
+    <details open>
+      <summary>Old Versions</summary>
+      <ul>
+        <li><a href="version/1.9.1" target="_blank">1.9.1 - 5/1/2025</a></li>
+        <li><a href="version/1.12" target="_blank">1.8 - 29/12/2024</a></li>
+        <li><a href="version/1.11" target="_blank">1.6.2 - 24/12/2024</a></li>
+        <li><a href="version/1.10.1" target="_blank">1.1 (Legacy) - 2/12/2024</a></li>
       </ul>
     </details>
   </body>
