--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coiny Clicker 1.12.1</title>
+  <link rel="icon" type="image/x-icon" src="Coiny_Icon.webp">
   <meta property="og:title" content="Coiny Clicker">
+  <meta property="og:image" content="https://alfakma17.github.io/CoinyClicker/Coiny_Icon.webp">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
