--- a/versions.html
+++ b/versions.html
@@ -47,6 +47,8 @@
     <details open>
       <summary>Modern Versions</summary>
       <ul>
+        <li><a href="version/1.12.2" target="_blank">1.12.2 - 11/5/2025</a></li>
+        <li><a href="version/1.12.1" target="_blank">1.12.1 - 2/5/2025</a></li>
         <li><a href="version/1.12.1" target="_blank">1.12.1 - 2/5/2025</a></li>
         <li><a href="version/1.12" target="_blank">1.12 - 1/5/2025</a></li>
         <li><a href="version/1.11" target="_blank">1.11 - 26/4/2025</a></li>
