--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
       <div class="background">
         <iframe class="game" src="version/1.12.2.html"></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work</div>
-      <div class="name">Press "L" for see leaderboards, and press "U" for change your username</div>
-      <br>
-      <div class="name">Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div>
+      <div class="name">Press "L" for see leaderboards, and press "U" for change your username<br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div>
       <br>
       <iframe src="versions.html" width="60%" height="300" style="border:0px solid black;"></iframe>
     </div>
