--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coiny Clicker 1.12.2</title>
-  <link rel="icon" type="image/x-icon" src="Coiny_Icon.webp">
+  <link rel="icon" type="image/x-icon" src="Coiny_Icon.png">
   <meta property="og:title" content="Coiny Clicker">
   <meta property="og:image" content="https://alfakma17.github.io/CoinyClicker/Coiny_Icon.webp">
   <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
       <div class="background">
         <iframe class="game" src="version/1.12.2.html"></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work</div>
-      <div class="name">Press "L" for see leaderboards, and press "U" for change your username<br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div>
+      <div class="name">Press "L" for see 🏆 leaderboards, and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div>
       <br>
       <iframe src="versions.html" width="60%" height="300" style="border:0px solid black;"></iframe>
     </div>
