--- a/versions.html
+++ b/versions.html
@@ -34,8 +34,12 @@
     li a:hover {
       text-decoration: underline;
     }
+    @font-face {
+     font-family: bfdi;
+     src: url(Fonts/Shag-Lounge.otf);
+    }
     body {
-      font-family: sans-serif;
+      font-family: bfdi;
       background: #50a2f4;
       color: #f0f0f0;
       padding: 20px;
