--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <div class="center">
     <div class="topbar">
-      <p class="title">Coiny Clicker <span class="version">version 1.12.2</span></p>
+      <p class="title">Coiny Clicker <span class="version">version 1.12.2-1</span></p>
     </div>
       <div class="background">
-        <iframe class="game" src="version/1.12.2.html"></iframe>
+        <iframe class="game" src="version/1.12.2-1.html"></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work<br><br>Leaderboard is not working right now. I don't know how to fix it, try to give me a solution in the feedback</div>
       <div class="name">Press "L" for see 🏆 leaderboards, and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div>
       <br>
