--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="background">
         <iframe class="game" src="version/1.13.html"></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work<br><br>Leaderboard is not working right now. I don't know how to fix it, try to give me a solution in the feedback</div>
-        <div class="name">I finally update the Coiny Clicker to 1.13. but i need your help to give me suggestion for next major update</div>
+        <div class="update">I finally update the Coiny Clicker to 1.13. but i need your help to give me suggestion for next major update</div>
       <div class="name">Press "L" for see 🏆 leaderboards, and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div>
       <br>
       <iframe src="versions.html" width="60%" height="300" style="border:0px solid black;"></iframe>
