--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Coiny Clicker 1.13</title>
   <link rel="icon" type="image/x-icon" src="Coiny_Icon.png">
   <meta property="og:title" content="Coiny Clicker">
-  <meta property="og:image" content="https://alfakma17.github.io/CoinyClicker/Coiny_Icon.webp">
+  <meta property="og:image" content="https://alfakma17.github.io/CoinyClicker/coiny_icon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
