--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coiny Clicker 1.13</title>
-  <link rel="icon" type="image/x-icon" src="Coiny_Icon.png">
+  <link rel="icon" href="coiny_icon.png">
   <meta property="og:title" content="Coiny Clicker">
-  <meta property="og:image" content="https://alfakma17.github.io/CoinyClicker/coiny_icon.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Alfakma17/CoinyClicker/refs/heads/main/coiny_icon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
