--- a/versions.html
+++ b/versions.html
@@ -49,10 +49,16 @@
     <details open>
       <summary>Modern Versions</summary>
       <ul>
-	<li><a href="version/1.14.html" target="_blank">1.14 - 30/5/2025</a></li>
+        <li><a href="version/1.14.1.html" target="_blank">1.14.1 - 1/6/2025</a></li>
+      	<li><a href="version/1.14.html" target="_blank">1.14 - 30/5/2025</a></li>
         <li><a href="version/1.13.1.html" target="_blank">1.13.1 - 21/5/2025</a></li>
-	<li><a href="version/1.13.html" target="_blank">1.13 - 18/5/2025</a></li>
-	<li><a href="version/1.12.2-1.html" target="_blank">1.12.2-1 - 13/5/2025</a></li>
+      	<li><a href="version/1.13.html" target="_blank">1.13 - 18/5/2025</a></li>
+      </ul>
+    </details>
+    <details>
+      <summary>Old Versions</summary>
+      <ul>
+       	<li><a href="version/1.12.2-1.html" target="_blank">1.12.2-1 - 13/5/2025</a></li>
         <li><a href="version/1.12.2.html" target="_blank">1.12.2 - 11/5/2025</a></li>
         <li><a href="version/1.12.1.html" target="_blank">1.12.1 - 2/5/2025</a></li>
         <li><a href="version/1.12.html" target="_blank">1.12 - 1/5/2025</a></li>
@@ -61,8 +67,8 @@
         <li><a href="version/1.10.html" target="_blank">1.10 - 9/3/2025</a></li>
       </ul>
     </details>
-    <details open>
-      <summary>Old Versions</summary>
+    <details>
+      <summary>Historical Versions</summary>
       <ul>
         <li><a href="version/1.9.1.html" target="_blank">1.9.1 - 5/1/2025</a></li>
         <li><a href="version/1.8.html" target="_blank">1.8 - 29/12/2024</a></li>
