--- a/versions.html
+++ b/versions.html
@@ -49,6 +49,7 @@
     <details open>
       <summary>Modern Versions</summary>
       <ul>
+        <li><a href="version/1.14.2.html" target="_blank">1.14.2 - 2/6/2025</a></li>
         <li><a href="version/1.14.1.html" target="_blank">1.14.1 - 1/6/2025</a></li>
       	<li><a href="version/1.14.html" target="_blank">1.14 - 30/5/2025</a></li>
         <li><a href="version/1.13.1.html" target="_blank">1.13.1 - 21/5/2025</a></li>
