--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coiny Clicker 1.14.2</title>
+  <title>Coiny Clicker 1.14.4</title>
   <link rel="icon" href="coiny_icon.png">
   <meta property="og:title" content="Coiny Clicker">
   <meta property="og:image" content="https://raw.githubusercontent.com/Alfakma17/CoinyClicker/refs/heads/main/coiny_icon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="center">
-    <div class="topbar">
-      <p class="title">Coiny Clicker <span class="version">version 1.14.2</span></p>
+  <div class="topbar">
+      <p class="title">
+        Coiny Clicker <span class="version">v1.14.4</span>
+      </p>
     </div>
+  <div class="center">
       <div class="background">
-        <iframe class="game" src="version/1.14.2.html"></iframe>
+        <iframe class="game" src="version/1.14.4.html"></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work<br><br>Leaderboard is not working right now. I don't know how to fix it, try to give me a solution in the feedback</div>
-        <div class="update">I finally update the Coiny Clicker to 1.14. but i need your help to give me suggestion for next major update</div>
-      <div class="name">Press "L" for see 🏆 leaderboards, and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div>
-	  <br>
-      <iframe src="versions.html" width="60%" height="300" style="border:0px solid black;"></iframe>
+        <div class="update">YAY!! Coiny Cliker 2 is here! But still not release yet...</div>
+      <div class="name">Press "L" for see 🏆 leaderboards (Coiny Clicker 1), and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div><br>
+	<iframe src="comments.html" width="70%" height="300" style="border:0px solid black;"></iframe>
+	 <br>
+      <iframe src="versions.html" width="70%" height="300" style="border:0px solid black; border-radius: 9px;"></iframe>
     </div>
     <br>
     <div class="cr">©2023-2025 Alfakma</div>
