--- a/versions.html
+++ b/versions.html
@@ -12,7 +12,7 @@
     details {
       background-color: #5bbdff;
       margin: 10px 0;
-      border-radius: 6px;
+      border-radius: 10px;
       padding: 10px;
     }
     summary {
@@ -45,11 +45,19 @@
   </style>
 </head>
 <body>
-    <tl>Some Older Versions:</tl>
+    <tl>Coiny Clicker 2</tl>
     <details open>
+      <summary>Beta</summary>
+      <ul>
+        <li><a href="version/2.0-1.html" target="_blank">2.0-1 NOT AVAILABLE...</a></li>
+      </ul>
+    </details>
+    <tl>Coiny Clicker</tl>
+    <details>
       <summary>Modern Versions</summary>
       <ul>
-        <li><a href="version/1.14.2.html" target="_blank">1.14.2 - 2/6/2025</a></li>
+        <li><a href="version/1.14.1.html" target="_blank">1.14.3 - 12/10/2025</a></li>
+        <li><a href="version/1.14.1.html" target="_blank">1.14.2 - 2/6/2025</a></li>
         <li><a href="version/1.14.1.html" target="_blank">1.14.1 - 1/6/2025</a></li>
       	<li><a href="version/1.14.html" target="_blank">1.14 - 30/5/2025</a></li>
         <li><a href="version/1.13.1.html" target="_blank">1.13.1 - 21/5/2025</a></li>
