--- a/versions.html
+++ b/versions.html
@@ -49,15 +49,17 @@
     <details open>
       <summary>Beta</summary>
       <ul>
-        <li><a href="version/2.0-1.html" target="_blank">2.0-1 NOT AVAILABLE...</a></li>
+        <li><a href="version/2.0-2.html" target="_blank">2.0-2 - 29/10/2025</a></li>
+        <li><a href="version/2.0-1.html" target="_blank">2.0-1 - 28/10/2025</a></li>
       </ul>
     </details>
     <tl>Coiny Clicker</tl>
     <details>
       <summary>Modern Versions</summary>
       <ul>
-        <li><a href="version/1.14.1.html" target="_blank">1.14.3 - 12/10/2025</a></li>
-        <li><a href="version/1.14.1.html" target="_blank">1.14.2 - 2/6/2025</a></li>
+        <li><a href="version/1.14.4.html" target="_blank">1.14.4 - 28/10/2025</a></li>
+        <li><a href="version/1.14.3.html" target="_blank">1.14.3 - 12/10/2025</a></li>
+        <li><a href="version/1.14.2.html" target="_blank">1.14.2 - 2/6/2025</a></li>
         <li><a href="version/1.14.1.html" target="_blank">1.14.1 - 1/6/2025</a></li>
       	<li><a href="version/1.14.html" target="_blank">1.14 - 30/5/2025</a></li>
         <li><a href="version/1.13.1.html" target="_blank">1.13.1 - 21/5/2025</a></li>
