--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coiny Clicker 2.0-2</title>
+  <title>Coiny Clicker 2.0-4</title>
   <link rel="icon" href="coiny_icon.png">
   <meta property="og:title" content="Coiny Clicker">
   <meta property="og:image" content="https://raw.githubusercontent.com/Alfakma17/CoinyClicker/refs/heads/main/coiny_icon.png">
@@ -11,21 +11,40 @@
 </head>
 <body>
   <div class="topbar">
-      <p class="title">
-        Coiny Clicker <span class="version">v2.0-2</span>
-      </p>
-    </div>
+    <p class="title">
+      Coiny Clicker <span class="version">v2.0-4</span>
+    </p>
+  </div>
   <div class="center">
       <div class="background">
-        <iframe class="game" src="version/2.0-2.html"></iframe>
+        <iframe class="game" src="version/2.0-4.html"bguv></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work<br><br>Leaderboard is not working right now. I don't know how to fix it, try to give me a solution in the feedback</div>
-        <div class="update">YAY!! Coiny Cliker 2 is here! But it still Beta...</div>
+        <div class="update">YAY!! Coiny Cliker 2 is here! But still not release yet...</div>
       <div class="name">Press "L" for see 🏆 leaderboards (Coiny Clicker 1), and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div><br>
-	 <br>
+   <div class="dsq" id="disqus_thread"></div>
+  <script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://alfakma17.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+  </script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       <iframe src="versions.html" width="70%" height="300" style="border:0px solid black; border-radius: 9px;"></iframe>
     </div>
     <br>
     <div class="cr">©2023-2025 Alfakma</div>
   </div>
+  <script id="dsq-count-scr" src="https://alfakma17.disqus.com/count.js" async></script>
 </body>
 </html>
