--- a/versions.html
+++ b/versions.html
@@ -49,6 +49,7 @@
     <details open>
       <summary>Beta</summary>
       <ul>
+        <li><a href="version/2.0-4.html" target="_blank">2.0-4 - 1/11/2025</a></li>
         <li><a href="version/2.0-2.html" target="_blank">2.0-2 - 29/10/2025</a></li>
         <li><a href="version/2.0-1.html" target="_blank">2.0-1 - 28/10/2025</a></li>
       </ul>
