Udahlah, Males aku bilang apa lagi

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </div>
   <div class="center">
       <div class="background">
-        <iframe class="game" src="version/2.0-4.html"bguv></iframe>
+        <iframe class="game" src="version/2.0-4.html"></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work<br><br>Leaderboard is not working right now. I don't know how to fix it, try to give me a solution in the feedback</div>
-        <div class="update">YAY!! Coiny Cliker 2 is here! But still not release yet...</div>
+        <div class="update">YAY!! Coiny Cliker 2 is here! But this still BETA. Wait for December 1st, ok</div>
       <div class="name">Press "L" for see 🏆 leaderboards (Coiny Clicker 1), and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div><br>
    <div class="dsq" id="disqus_thread"></div>
   <script>
