--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coiny Clicker 2.0-4</title>
+  <title>Coiny Clicker 2.1-1</title>
   <link rel="icon" href="coiny_icon.png">
   <meta property="og:title" content="Coiny Clicker">
   <meta property="og:image" content="https://raw.githubusercontent.com/Alfakma17/CoinyClicker/refs/heads/main/coiny_icon.png">
@@ -12,14 +12,14 @@
 <body>
   <div class="topbar">
     <p class="title">
-      Coiny Clicker <span class="version">v2.0-4</span>
+      Coiny Clicker <span class="version">v2.1-1</span>
     </p>
   </div>
   <div class="center">
       <div class="background">
-        <iframe class="game" src="version/2.0-4.html"></iframe>
+        <iframe class="game" src="version/2.1-1.html"bguv></iframe>
       <div class="note">*Please for those of you who are not comfortable with the wrong font. Then download the Shag-Lounge font to your device to work<br><br>Leaderboard is not working right now. I don't know how to fix it, try to give me a solution in the feedback</div>
-        <div class="update">YAY!! Coiny Cliker 2 is here! But this still BETA. Wait for December 1st, ok</div>
+        <div class="update">HUGE UPDATE! COINY CLICKER 2 <ruby style="color:rgb(255, 78, 78)">RUBY UPDATE!</ruby> YAY.</div>
       <div class="name">Press "L" for see 🏆 leaderboards (Coiny Clicker 1), and press "U" for change your username<br><br>Coiny Clicker is a game where you click on the Coiny, Nickel and Ruby (2nd currency). And there is also Gold currency, Yoylite, and Gems. This game is made for 4+ ages</div><br>
    <div class="dsq" id="disqus_thread"></div>
   <script>
